--- a/index.html
+++ b/index.html
@@ -5,76 +5,68 @@
   <link rel="stylesheet" href="./resources/css/style.css">
   <title>Broadway Design</title>
 </head>
-<body>
-
+<body class="body">
   <header class="header">
-    <h1 class="header__h1">Broadway Design</h1>
+    <h1 class="header__h1" id="home">Broadway Design</h1>
     <nav class="header__nav">
-      <ol class="header__ol">
-        <li class="header__li"><a class="header__a" href="#">Home</a></li>
-        <li class="header__li"><a class="header__a" href="#">About</a></li>
-        <li class="header__li"><a class="header__a" href="#">Work</a></li>
-        <li class="header__li"><a class="header__a" href="#">Team</a></li>
-        <li class="header__li"><a class="header__a" href="#">Contact</a></li>
-      </ol>
+      <p><a class="header__a" href="#home">Home</a></p>
+      <p><a class="header__a" href="#about">About</a></p>
+      <p><a class="header__a" href="#work">Work</a></p>
+      <p><a class="header__a" href="#team">Team</a></p>
+      <p><a class="header__a" href="#contact">Contact</a></p>
     </nav>
   </header>
 
   <main class="main">
-    <h2 class="main__h2">Our Process</h2>
+    <h2 class="main__h2" id="about">Our Process</h2>
     <section class="section">
-
       <article class="section__article">
-        <img src="" alt="" class="section__img">
+        <img src="./resources/images/identify.svg" alt="squiggly line icon" class="section__img">
         <h3 class="section__h3">Identify</h3>
         <p class="section__p">We focus on the most important details.</p>
       </article>
 
       <article class="section__article">
-        <img src="" alt="" class="section__img">
+        <img src="./resources/images/understand.svg" alt="circle line icon" class="section__img">
         <h3 class="section__h3">Understand</h3>
         <p class="section__p">We study our projects inside and out.</p>
       </article>
 
       <article class="section__article">
-        <img src="" alt="" class="section__img">
+        <img src="./resources/images/execute.svg" alt="arrow icon" class="section__img">
         <h3 class="section__h3">Execute</h3>
         <p class="section__p">We put everything we have into our work.</p>
       </article>
 
       <article class="section__article">
         <h2 class="section__h2">Designed in New York</h2>
-        <h3 class="section__h3">Portfolio</h3>
+        <h3 class="section__h3" id="work">Portfolio</h3>
         <p class="section__p">Coming Soon</p>
       </article>
 
       <article class="section__article">
-        <h3 class="section__h3">Team</h3>
+        <h3 class="section__h3" id="team">Team</h3>
         <p class="section__p">We're Hiring!</p>
       </article>
 
       <article class="section__article">
-        <h3 class="section__h3">Contact</h3>
+        <h3 class="section__h3" id="contact">Contact</h3>
         <p class="section__p">Phone: (555)-555-5555</p>
         <p class="section__p">E-mail: test@example.com</p>
         <p class="section__p">Twitter: @test</p>
       </article>
-
     </section>
   </main>
 
   <footer class="footer">
     <p class="footer__p">&copy; Broadway 2017 </p>
     <nav class="footer__nav">
-      <ol class="nav__ol">
-        <li class="footer__li"><a class="footer__a" href="#">Home</a></li>
-        <li class="footer__li"><a class="footer__a" href="#">About</a></li>
-        <li class="footer__li"><a class="footer__a" href="#">Work</a></li>
-        <li class="footer__li"><a class="footer__a" href="#">Team</a></li>
-        <li class="footer__li"><a class="footer__a" href="#">Contact</a></li>
-      </ol>
+      <a class="footer__a" href="#home">Home</a>
+      <a class="footer__a" href="#about">About</a>
+      <a class="footer__a" href="#work">Work</a>
+      <a class="footer__a" href="#team">Team</a>
+      <a class="footer__a" href="#contact">Contact</a>
     </nav>
   </footer>
-
 </body>
 </html>
